<resources>
    <string name="app_name">WisataJakarta</string>
    <string name="judul">Wisata Jakarta App</string>
    <string name="halo">Halo Netizen</string>
    <string name="deschalo">Rekomendasi tempat liburan di Jakarta</string>
    <string name="jakrta">Jakarta</string>
    <string name="title_activity_menu_layout">MenuLayout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lihat_yuk">Lihat Yuk</string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="lokasi">lokasi</string>
    <string name="desc">Desc</string>
    <string name="jam_buka">Jam Buka</string>
</resources>