<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="#F5F5F5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDetailImg"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/rounded_rectangle"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tvDetailNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="20dp"
                android:text="@string/nama_wisata"
                android:textColor="@color/primary_text"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/tvDetailLokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/lokasi"
                    android:textColor="@color/primary_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDetailJambuka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/jam_buka"
                android:textColor="@color/secondary_text"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvDetailDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/desc"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_action_share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="325dp"
            android:layout_marginTop="275dp"
            android:background="@drawable/circle"
            android:src="@drawable/ic_baseline_share_24"/>
    </FrameLayout>

</ScrollView>