<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/orange"
    android:padding="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imgMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#80F8F8FF"
                android:layout_gravity="bottom"
                >


                <TextView
                    android:id="@+id/tvMenuNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/primary_text"
                    android:text="@string/nama_wisata"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="3dp"
                        android:background="@drawable/ic_baseline_location_on_24" />

                    <TextView
                        android:id="@+id/tvMenuLokasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:maxLines="1"
                        android:text="@string/lokasi"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>



                <TextView
                    android:id="@+id/tvMenuDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="2"
                    android:text="@string/desc"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</LinearLayout>